--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HYEJUN PORTFOLIO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="portfolio/assets/css/sub.css">
 </head>
 <body>
 
-    <div>hello</div>
+    <h1>hello</h1>
 
 
 </body>
