--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HYEJUN PORTFOLIO</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
     <header id="header" class="header">    
         <div class="inner">
             <h1 id="logo" class="logo">
-                <a href="/">Jun Portfolio</a>
+                <a href="https://junjunpark.github.io/junworld/">Jun Portfolio</a>
             </h1>
             <nav class="nav">
                 <ul class="gnb">
