[수정] 인덱스

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </h1>
             <nav class="nav">
                 <ul class="gnb">
-                    <li class="on"><a href="">HOME</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Work</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li class="on"><a href="#HOME">HOME</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Work">Work</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <button class="nav-toggle-btn"></button>
                 <div class="mode">
@@ -48,7 +48,7 @@
 
             <!-- [s] main  -->
             <main>
-                <section class="section sec01">
+                <section class="section sec01" id="HOME">
                     <div class="inner">
                         <div class="col-2">
                             <div class="col"></div>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="section sec02">
+                <section class="section sec02" id="About">
                     <div class="inner">
                         <h3 class="title">ABOUT ME</h3>
                         <div class="about-area scEvt">
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="section sec03">
+                <section class="section sec03" id="work">
                     <div class="inner">
                         <h3 class="title">WORK</h3>
                         <div class="tab-wrap">
@@ -522,13 +522,13 @@
                         </div>
                     </div>
                 </section>
-                <section class="section sec04">
+                <section class="section sec04" id="Contact">
                     <div class="inner">
                         <h3 class="title">CONTACT</h3>
                         <div class="contact-area col-2">
                                 <div class="col contact-box">
-                                    <div class="sec-btitle">저에게 궁금한 점이 있으시다면<br>언제든지 연락주세요!</div>
-                                    <p class="text">Let's make something AWESOME TOGETER!</p>
+                                    <div class="sec-btitle scEvt">저에게 궁금한 점이 있으시다면<br>언제든지 연락주세요!</div>
+                                    <p class="text scEvt">Let's make something AWESOME TOGETER!</p>
                                     <div class="contact-email">
                                         <span id="copy-email" class="hidden">hyejun1207@gmail.com</span>
                                         <button id="copy-email-btn" class="msg-popup-btn" onclick="copyToClipBoard()"><i class="fa-regular fa-envelope"></i> hyejun1207@gmail.com</button>
@@ -540,7 +540,7 @@
                                             <div class="dimmed"></div>
                                         </div>
                                     </div>
-                                    <div class="form-wrap scEvt">
+                                    <div class="form-wrap">
                                         <!-- START HERE -->
                                         <!-- Style The Contact Form How Ever You Prefer -->
                                         <form class="gform pure-form pure-form-stacked" method="POST" data-email="junjunpark08" target="iframe1" action="https://script.google.com/macros/s/AKfycbxqE7gW-4UKoHE6-rKieIkzwd3gyJ2V1BteU8c97zVGjJ9hGbpllshlmn_yRo83YTh9xw/exec">
