[수정] 타이틀

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                                             <div class="thankyou_message msg-popup-wrap" style="display:none;">
                                                 <div class="msg-popup">
                                                     <p>감사합니다👍 확인 후 회신드리겠습니다!</p>
-                                                    <a class="btn msg-popup-btn">확인</a>
+                                                    <a class="btn close-btn">확인</a>
                                                 </div>
                                                 <div class="dimmed"></div>
                                             </div>
